test/src/e2e_vm_tests/test_programs/should_fail/module_not_at_beginning/src/main.sw
library;

fn main() { }

mod a_module;
